# filaments

./: .gitignore  .harper-dictionary.txt  Cargo.toml  README.md  build.rs  flake.nix  justfile
.config/: config.kdl  config.ron  default_config.ron
.github/workflows/: check.yaml  test.yaml
.helix/: languages.toml
.tangled/workflows/: check.yaml  test.yaml
crates/db/: Cargo.toml
crates/db/migration/: Cargo.toml
crates/db/migration/src/: lib.rs  m20260318_233726_group_table.rs  m20260319_002245_task_table.rs  m20260323_002518_zettel_table.rs
crates/db/migration/src/types/: mod.rs  priority.rs
crates/db/src/: errors.rs  lib.rs
crates/db/src/entity/: group.rs  mod.rs  prelude.rs  task.rs  zettel.rs
crates/db/tests/: task.rs
crates/db/tests/common/: mod.rs
crates/dto/: Cargo.toml
crates/dto/migration/: Cargo.toml
crates/dto/migration/src/: lib.rs  m20260318_233726_group_table.rs  m20260319_002245_task_table.rs  m20260323_002518_zettel_table.rs  m20260327_175853_tag_table.rs  m20260327_180618_zettel_tag_table.rs  m20260406_200424_remove_path_from_zettel.rs  m20260410_223725_add_tag_to_group.rs
crates/dto/migration/src/types/: color.rs  mod.rs  nano_id.rs  priority.rs
crates/dto/src/: db.rs  lib.rs
crates/dto/src/entity/: group.rs  mod.rs  prelude.rs  tag.rs  task.rs  zettel.rs  zettel_tag.rs
crates/dto/tests/: task.rs  zettel.rs
crates/dto/tests/common/: mod.rs
crates/sakura/: Cargo.toml
crates/sakura/src/: behaviors.rs  iterators.rs  node.rs  tree.rs
crates/tree/: Cargo.toml
crates/tree/src/: behaviors.rs  error.rs  iterators.rs  lib.rs  node.rs  tree.rs
doc/: act1.md  onepointo.md
fil-types/src/: lib.rs
src/: app.rs  cli.rs  config.rs  errors.rs  keymap.rs  logging.rs  main.rs  signal.rs  tui.rs
src/cli/: mod.rs  process.rs
src/components/: mod.rs
src/config/: file.rs  keymap.rs  mod.rs
src/gui/: mod.rs
src/lsp/: mod.rs
src/tui/: app.rs  keymap.rs  mod.rs  signal.rs
src/tui/components/: mod.rs
src/tui/components/todo/: explorer.rs  mod.rs  tasklist.rs
src/tui/components/todo/inspector/: groupview.rs  mod.rs  rootview.rs  taskview.rs
src/tui/components/viewport/: mod.rs  switcher.rs
src/tui/components/zk/: mod.rs  preview.rs  search.rs  zettel_list.rs  zettel_view.rs
src/types/: color.rs  deimos.rs  due.rs  filaments.rs  frontmatter.rs  group.rs  index.rs  kasten.rs  link.rs  mod.rs  priority.rs  tag.rs  task.rs  workspace.rs  zettel.rs
src/types/kasten/: mod.rs  todo_tree.rs
src/types/kasten/index/: mod.rs  zod.rs
src/types/zettel/: id.rs  mod.rs
src/viz/: mod.rs
