[workspace]
members = []


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["suri.codes <suri312006@gmail.com>"]
description = "Personal-Knowledge-System, with deeply integrated task tracking and long term goal planning capabilities."
license = "GNU GPLv3"
repository = "https://tangled.org/suri-codes/filaments"
# once we have this up on my website
# homepage = ""
# documentation = ""
readme = "README.md"
keywords = ["PKS", "todo", "personal tools"]
rust-version = "1.94.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
snafu = "0.9.0"
tracing = "0.1.44"

[package]
name = "filaments"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
# homepage.workspace = true
# documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
color-eyre = "0.6.5"
human-panic = "2.0.6"
better-panic = "0.3.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
signal-hook = "0.4.3"
strum = { version = "0.28.0", features = ["derive"] }
directories = "6.0.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-error = "0.2.1"
clap = { version = "4.5.60", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }

[build-dependencies]
anyhow = "1.0.102"
vergen-gix = {version = "9.1.0", features = ["build", "cargo"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

