[workspace]
members = [
  "crates/dto",
  "crates/dto/migration",
  "crates/tree"
]


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["suri.codes <suri312006@gmail.com>"]
description = "Personal-Knowledge-System, with deeply integrated task tracking and long term goal planning capabilities."
license = "GNU GPLv3"
repository = "https://tangled.org/suri-codes/filaments"
# once we have this up on my website
# homepage = ""
# documentation = ""
readme = "README.md"
keywords = ["PKS", "todo", "personal tools"]
rust-version = "1.94.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
snafu = "0.9.0"
serde = "1.0.228"
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["full"] }
tree = {path = "crates/tree"}

[package]
name = "filaments"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
# homepage.workspace = true
# documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "fil"
path = "./src/main.rs"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
color-eyre = "0.6.5"
human-panic = "2.0.8"
better-panic = "0.3.0"
tokio = {workspace = true}
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = "0.7.18"
signal-hook = "0.4.4"
strum = { version = "0.28.0", features = ["derive"] }
directories = "6.0.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-error = "0.2.1"
clap = { version = "4.6.0", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
dto = {path="./crates/dto"}
eframe = "0.34.1"
async-trait = "0.1.89"
egui_graphs = "0.30.0"
rayon = "1.11.0"
rand = "0.10.0"
pulldown-cmark = { version = "0.13.3", features = ["simd"] }
ratatui-textarea = "0.8.0"
nucleo-matcher = "0.3.1"
ron = "0.12.1"
tower-lsp = "0.20.0"
notify = "8.2.0"
tree = {workspace = true}
async-recursion = "1.1.1"
chrono = "0.4.44"

[build-dependencies]
anyhow = "1.0.102"
vergen-gix = {version = "9.1.0", features = ["build", "cargo"]}

[dev-dependencies]
tempfile = "3"

# patch egui_graphs to have egui 0.34.1
[patch.crates-io]
egui_graphs = { git = "https://github.com/suri-codes/egui_graphs", rev = "3327417007520300782574e3d6bc377bbafa8b5a" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

