[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
sea-orm = {version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-chrono"]}
tracing = {workspace = true}
thiserror = "2.0.18"



[dev-dependencies]
tokio = {workspace = true}

[lints]
workspace = true
