[package]
name = "sakura"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
automerge = "0.7.3"
autosurgeon = "0.10.1"
serde.workspace = true


[lints.clippy]
pedantic = "deny"
nursery = "deny"
