[package]
name = "tree"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
automerge = {version = "0.7.4", optional = true}
autosurgeon = {version = "0.10.1", optional =  true}
serde.workspace = true


[features]
automerge = ["dep:automerge", "dep:autosurgeon"]

[lints.clippy]
pedantic = "deny"
nursery = "deny"
